--- a/.github/workflows/codeQL.yml
+++ b/.github/workflows/codeQL.yml
@@ -7,6 +7,9 @@ on:
 jobs:
   CodeQL-Build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        language: ['javascript', 'python']
 
     permissions:
       # required for all workflows
@@ -20,8 +23,6 @@ jobs:
 
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v1
-        with:
-          languages: cpp, csharp, python
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v1
